--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "postcss-selector-matches": "^2.0.5",
     "postcss-selector-not": "^2.0.0",
     "react-hot-loader": "^3.0.0-beta.2",
+    "redux-immutable-state-invariant": "^1.2.4",
     "rimraf": "^2.5.4",
     "s3": "^4.4.0",
     "style-loader": "^0.13.1",
