--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
+    "throttle-debounce": "^1.0.1",
     "whatwg-fetch": "^2.0.2"
   },
   "devDependencies": {
